# MLOPS

./: .gitignore  .gitmodules  README.md
lab1/homework/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  download_models.py  pyproject.toml
lab1/homework/src/: app.py  main.py
lab1/homework/src/api/models/: request.py
lab1/homework/src/model/: .gitignore  PredictionModel.py
lab1/homework/tests/: test_api.py
lab1/laboratory/: .pre-commit-config.yaml  .sops.yaml  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  secrets.yaml  settings.py
lab1/laboratory/.envs/: .env.dev  .env.prod  .env.test
lab1/laboratory/src/: app.py  main.py  settings.py
lab1/laboratory/src/model/: inference.py  training.py
lab1/laboratory/tests/: test_api.py  test_settings.py
lab10/excercise1/: main.tf  repository.tf  variables.tf
lab10/excercise2/: main.tf  outputs.tf  s3.tf  variables.tf
lab10/excercise3/: main.tf  outputs.tf  s3.tf  variables.tf
lab10/excercise3/modules/s3_bucket/: main.tf  outputs.tf  variables.tf
lab12/: README.md
lab12/homework/: .gitignore  HOMEWORK.md  README.md  docker-compose.yaml  pyproject.toml  results.ipynb
lab12/homework/dags/: model_training.py  taxi_data_prep.py
lab12/homework/dags/processing/: process_data.py
lab12/homework/dags/training/: data_transform.py  models.py
lab12/homework/init_db/: init.sql
lab12/homework/localstack-init/ready.d/: create_buckets.sh
lab12/laboratory/: .gitignore  Dockerfile  LAB_INSTRUCTION.md  docker-compose.yaml  pyproject.toml
lab12/laboratory/dags/: 01_class_pipeline.py  02_taskflow_pipeline.py  03_scheduling.py  04_backfilling.py  05_scheduling_venvs.py  06_s3_integration.py  07_connections_and_variables.py
lab12/laboratory/init_db/: init.sql
lab12/laboratory/localstack-init/ready.d/: 01-create-buckets.sh
lab13/: lab.ipynb  pyproject.toml
lab13/homework/: HOMEWORK.md  docker-compose.yaml  mcp_host.py  pyproject.toml  test.ipynb
lab13/homework/mcp_weather/: Dockerfile  api.py
lab13/homework/trip_assistant/: chatbot.py  mcp_manager.py
lab13/laboratory/: lab.ipynb  mcp_host.py  model_download.py  pyproject.toml
lab13/laboratory/mcp_servers/: datetime.py  visualisation.py
lab13/mcp_servers/: dummy_weather.py
lab2/: HOMEWORK.md  LAB_INSTRUCTION.md  README.md  compose.yaml  download_data.sh  homework.ipynb  notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb  pyproject.toml
lab2/data/: .gitignore  services_table.sql
lab3/: HOMEWORK.md  README.md  homework.ipynb  notebook_polars.ipynb  pyproject.toml
lab4/: .gitignore  database.ipynb  milvus.ipynb  pyproject.toml
lab4/homework/: README.md  database.ipynb  pyproject.toml
lab4/laboratory/: README.md  milvus.ipynb  pgvector.ipynb
lab4/laboratory/vectorscale_db/init_db/: prepare_similarity_search_service_db.sql
lab4/vectorscale_db/: docker-compose.yaml
lab5/: .gitignore  LAB_INSTRUCTION_1_DVC.md  LAB_INSTRUCTION_2_MLFLOW.ipynb
lab6/: .gitignore  HOMEWORK.md  LAB_INSTRUCTION.ipynb  README.md  homework.ipynb  label_desc.tsv  pyproject.toml
lab7/: .gitignore  Dockerfile_onnx  Dockerfile_torch  LAB_INSTRUCTION.md  README.md  lab.ipynb  lab_cuda.ipynb  onnx_api.py  pyproject.toml  torch_api.py
lab7/apis/: Dockerfile_onnx  Dockerfile_torch  docker-compose.yaml  onnx_api.py  torch_api.py
lab7/apis/api/models/: request.py
lab8/: README.md
lab9/: lab.md
