[project]
name = "homework"
version = "0.1.0"
description = "Lab1 homework task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.6.0",
    "fastapi>=0.119.0",
    "joblib>=1.5.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]