[project]
name = "laboratory"
version = "0.1.0"
description = "Lab1 warm-up task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pyaml>=25.7.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-dotenv>=0.5.2",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.37.0",
]
