[project]
name = "vector-databases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pgvector>=0.4.1",
    "pillow>=12.0.0",
    "polars>=1.34.0",
    "psycopg>=3.2.12",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
]
